Fix sidebar spacing

--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,13 @@ h1 {
     grid-row: 1 / -1;
     color: white;
     font-weight: bold;
+    grid-template-rows: 1fr 2fr 1fr
+}
+
+.user-navigation,
+.utility {
+    grid-template-rows: repeat(auto-fit, 50px);
+    align-content: center;
 }
 
 .header {
@@ -109,6 +116,7 @@ button {
     background-color: white;
     border-left: 4px solid gold;
     padding: 10px;
+    border-radius: 10px;
 }
 
 .announcements,
